--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">JiraClone</string>
+    <string name="teams">Teams</string>
+    <string name="tasks">Tasks</string>
+    <string name="extra">Extra</string>
 </resources>
