--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="teams">Teams</string>
     <string name="tasks">Tasks</string>
     <string name="extra">Extra</string>
+    <string name="list_of_tasks">List Of Tasks</string>
+    <string name="content">Content</string>
+    <string name="create_task">Create Task</string>
+    <string name="task_title">Task Title</string>
 </resources>
