Add observer in Task Details Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,12 @@
     <string name="tasks">Tasks</string>
     <string name="extra">Extra</string>
     <string name="list_of_tasks">List Of Tasks</string>
+    <string name="task_details">List Of Tasks</string>
     <string name="content">Content</string>
     <string name="create_task">Create Task</string>
     <string name="task_title">Task Title</string>
     <string name="description">Description</string>
     <string name="bullet_title">Bullet title</string>
+    <string name="add_task">Add Task</string>
+    <string name="edit_task">Edit Task</string>
 </resources>
