Add Edit Fragment for update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="tasks">Tasks</string>
     <string name="extra">Extra</string>
     <string name="list_of_tasks">List Of Tasks</string>
-    <string name="task_details">List Of Tasks</string>
+    <string name="task_details">Task Details</string>
     <string name="content">Content</string>
     <string name="create_task">Create Task</string>
     <string name="task_title">Task Title</string>
@@ -13,4 +13,5 @@
     <string name="bullet_title">Bullet title</string>
     <string name="add_task">Add Task</string>
     <string name="edit_task">Edit Task</string>
+    <string name="update">Update</string>
 </resources>
