--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,12 @@
     <string name="add_task">Add Task</string>
     <string name="edit_task">Edit Task</string>
     <string name="update">Update</string>
-    <string name="list_of_Developers">List Of Developers</string>
+    <string name="list_of_team_members">Team Members</string>
     <string name="list_of_Teams">List of Teams</string>
     <string name="create_team">Create New Team</string>
     <string name="team_name_hint">Team Name</string>
     <string name="create_new_team">Create Team</string>
     <string name="add_new_team">New Team</string>
+    <string name="member_picture">Member picture</string>
+    <string name="work_basket">Work Basket</string>
 </resources>
